compiler/test-data/parser/arena/errors/missing_for.frel
module test

scheme User {
    id : Uuid .. identity
    name : String
}

arena UserArena {
    User
}
